# ArcticDB

./: .clang-format  .clangd  .cproject  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .vars  ArcticDB Individual Contributor License Agreement  ArcticDB Individual Contributor License Agreement.md  BSL License  BSL License 1.1  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.txt  Individual Contributor License Agreement.md  LICENSE  LICENSE.txt  Makefile  Makefile.local.example  NOTICE.txt  README.md  SECURITY.md  Untitled5 (1).ipynb  _redirects  api  asv.conf.json  bench_search.py  build.txt  build_and_test.sh  column_stats.md  column_stats_plan.md  compat_testing_notes.md  coverity.yaml  create_benchmark_data.py  create_benchmark_data_index.py  docker-compose.yaml  env.sh  env_mac.yml  (+33 more)
cpp/: .CMakeUserPresets.json.swp  CMakeLists.txt  CMakePresets.json  arcticdbConfig.cmake.in  qs_for_william.md  vcpkg-configuration.json  vcpkg.json  windows_env_probe.cpp
cpp/CMake/: AzureVcpkg.cmake  CheckSupportsPreset.cmake  CpuCount.cmake  FindKRB5.cmake  FindKerberos.cmake  FindLMDB.cmake  FindLMDBXX.cmake  FindLZ4.cmake  FindLibevent.cmake  FindPCRE.cmake  FindSpdlog.cmake  FindXxhash.cmake  FindZstd.cmake  Findspdlog.cmake  FindxxHash.cmake  FollyVersionUtils.cmake  PythonUtils.cmake  ccache-toolchain.cmake  compiler_cache.cmake  pdb_generation.cmake  sanitizers.cmake
cpp/arcticdb/: .clang-format  CMakeLists.txt  arcticdb-config.cmake.in  file_with_deliberate_errors.cpp  memory_layout.hpp  test_coverity_pr_comments.cpp
cpp/arcticdb/arrow/: array_from_block.hpp  arrow_array.cpp  arrow_array.hpp  arrow_buffer.hpp  arrow_c_data_interface.hpp  arrow_c_interface.cpp  arrow_c_interface.hpp  arrow_common.hpp  arrow_data.hpp  arrow_data_interface.hpp  arrow_error.hpp  arrow_handlers.cpp  arrow_handlers.hpp  arrow_output_frame.cpp  arrow_output_frame.hpp  arrow_output_options.hpp  arrow_schema.cpp  arrow_schema.hpp  arrow_stream_interace.hpp  arrow_utils.cpp  arrow_utils.hpp  arrow_wrappers.h  include_sparrow.hpp  lazy_record_batch_iterator.cpp  lazy_record_batch_iterator.hpp  python_bindings.cpp  python_bindings.hpp  table_to_tensor_frame.hpp
cpp/arcticdb/async/: async_store.cpp  async_store.hpp  base_task.hpp  batch_read_args.hpp  bit_rate_stats.cpp  bit_rate_stats.hpp  python_bindings.cpp  python_bindings.hpp  task_scheduler.cpp  task_scheduler.hpp  tasks.cpp  tasks.hpp
cpp/arcticdb/bindings/: arcticdb_c.cpp  arcticdb_c.h  arrow_stream.hpp  test_c_api_smoke.cpp  test_c_api_stream_smoke.cpp
cpp/arcticdb/codec/: adaptive.hpp  adaptive_encoder.hpp  bitmap_utils.cpp  bitmap_utils.hpp  bitpack_fused.hpp  bitpacking.hpp  calculate_stats.hpp  codec-inl.hpp  codec.cpp  codec.hpp  codec_utils.cpp  codec_utils.hpp  codec_v1.cpp  codec_v1.hpp  codec_v2.cpp  codec_v2.hpp  column_encoder_utils.cpp  column_encoder_utils.hpp  constant_encoding.hpp  core.hpp  default_codecs.hpp  delta.hpp  encode_common.hpp  encode_v1.cpp  encode_v1.hpp  encode_v2.cpp  encode_v2.hpp  encoded_field.cpp  encoded_field.hpp  encoded_field_collection.hpp  encoding_scheme_picker.hpp  encoding_sizes.cpp  encoding_sizes.hpp  encoding_version.hpp  fastlanes_common.hpp  ffor.hpp  frequency_encoding.hpp  lz4.hpp  magic_words.hpp  null_encoding.hpp  (+23 more)
cpp/arcticdb/column_store/: block.cpp  block.hpp  buffer_protocol_python_adapters.cpp  buffer_protocol_python_adapters.hpp  chunked_buffer.cpp  chunked_buffer.hpp  column.cpp  column.hpp  column_algorithms.hpp  column_block_range.hpp  column_data.cpp  column_data.hpp  column_data_random_accessor.cpp  column_data_random_accessor.hpp  column_impl.inl  column_map.hpp  column_python_adapters.cpp  column_python_adapters.hpp  column_reslicer.cpp  column_reslicer.hpp  column_utils.cpp  column_utils.hpp  column_utils_python.cpp  column_utils_python.hpp  concepts.hpp  key_segment.cpp  key_segment.hpp  memory_segment.cpp  memory_segment.hpp  memory_segment_impl.cpp  memory_segment_impl.hpp  memory_segment_pretty_print.hpp  python_bindings.cpp  python_bindings.hpp  row_ref.hpp  segment_reslicer.cpp  segment_reslicer.hpp  segment_utils.cpp  segment_utils.hpp  statistics.hpp  (+3 more)
cpp/arcticdb/datasource/: csv_reader.hpp
cpp/arcticdb/entity/: atom_key.cpp  atom_key.hpp  compact_data_info.cpp  compact_data_info.hpp  data_error.cpp  data_error.hpp  descriptor_item.hpp  descriptors.hpp  field_collection.cpp  field_collection.hpp  field_collection_proto.cpp  field_collection_proto.hpp  frame_and_descriptor.hpp  index_range.hpp  key-inl.hpp  key.cpp  key.hpp  merge_descriptors.cpp  merge_descriptors.hpp  metrics.cpp  metrics.hpp  native_tensor.hpp  no_data_retrieved.hpp  output_format.hpp  output_type.hpp  performance_tracing.cpp  performance_tracing.hpp  protobuf_mappings.cpp  protobuf_mappings.hpp  protobufs.hpp  python_bindings.cpp  python_bindings.hpp  python_bindings_common.cpp  python_bindings_common.hpp  read_result.hpp  ref_key.cpp  ref_key.hpp  schema_item.hpp  serialized_key.hpp  stage_result.cpp  (+14 more)
cpp/arcticdb/log/: log.cpp  log.hpp  trace.hpp
cpp/arcticdb/pipeline/: chunking.cpp  chunking.hpp  column_mapping.cpp  column_mapping.hpp  column_name_resolution.cpp  column_name_resolution.hpp  column_stats.cpp  column_stats.hpp  column_stats_dispatch.cpp  column_stats_dispatch.hpp  column_stats_filter.cpp  column_stats_filter.hpp  error.hpp  execution.hpp  filter_range.hpp  filter_segment.hpp  frame_data_wrapper.hpp  frame_slice.cpp  frame_slice.hpp  frame_slice_map.hpp  frame_utils.cpp  frame_utils.hpp  index_fields.hpp  index_segment_reader.cpp  index_segment_reader.hpp  index_utils.cpp  index_utils.hpp  index_writer.hpp  input_frame.cpp  input_frame.hpp  input_frame_utils.hpp  input_tensor_frame.hpp  lazy_read_helpers.cpp  output_config.hpp  (+31 more)
cpp/custom-triplets/: arm64-osx-15.cmake  clang-tsan-toolchain.cmake  x64-linux-clang.cmake  x64-linux-nolto.cmake  x64-linux-tsan.cmake  x64-linux.cmake  x64-windows-static-msvc.cmake
cpp/proto/: CMakeLists.txt
cpp/tests/: .gitignore  README.md
cpp/toolchains/: linux-clang.cmake
excel/gateway/: Cargo.toml
(+6595 files in other folders)
