[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
environment-pass = """ARCTIC_CMAKE_PRESET CMAKE_BUILD_PARALLEL_LEVEL\
    VCPKG_BINARY_SOURCES VCPKG_NUGET_USER VCPKG_NUGET_TOKEN VCPKG_MAN_NUGET_USER VCPKG_MAN_NUGET_TOKEN"""
build-frontend = "build"
test-extras = "Testing"

[tool.cibuildwheel.linux]
# See also build_many_linux_image.sh
before-all = """
[[ -e /etc/arcticdb_deps_installed ]] || { yum update -y && yum install -y zip \
    openssl-devel cyrus-sasl-devel devtoolset-11 devtoolset-11-libatomic-devel libcurl-devel ; }
# Override vcpkg ninja to use older version (1.10.2) compatible with GLIBCXX_3.4.19
cp '{project}/cpp/third_party/vcpkg_overlays/ninja/vcpkg_find_acquire_program(NINJA).cmake' \
   '{project}/cpp/vcpkg/scripts/cmake/vcpkg_find_acquire_program(NINJA).cmake'
{project}/build_tooling/prep_cpp_build.sh
{project}/build_tooling/vcpkg_caching.sh
"""
before-build = "env"
build = "cp*-manylinux_x86_64"
manylinux-x86_64-image = "ghcr.io/man-group/cibuildwheel_manylinux:latest"

[tool.cibuildwheel.windows]
build = "cp*-win_amd64"
before-all = "bash {project}/build_tooling/prep_cpp_build.sh"
before-build = "set"

[tool.cibuildwheel.macos]
build = "cp*-macosx_15_0_arm64"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
target_version = ['py39', 'py310', 'py311', 'py312', 'py313', 'py314']
preview = true
# This must be kept in sync with the version in setup.cfg.
exclude = '''
/(
  | \.git
  | \.github
  | \.mypy_cache
  | \.vscode
  | \.idea
  | build_tooling
  | cpp
  | docs
  | static
)/
'''
