[metadata]
name = arcticdb
description = ArcticDB DataFrame Database
author = Man Alpha Technology
author_email = arcticdb@man.com
keywords =
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Topic :: Database
    Topic :: Database :: Database Engines/Servers
url = https://github.com/man-group/arcticdb

[options]
setup_requires =
    # Setup dependencies
    wheel

install_requires =
    # Runtime dependencies
    numpy
    pandas <2
    attrs
    dataclasses ; python_version < '3.7'
    enum-compat
    grpcio-tools
    protobuf >=3.5.0.post1 # Per https://github.com/grpc/grpc/blob/v1.45.3/requirements.txt
    xxhash
    six
    msgpack
    psutil
    pyyaml
    decorator
    prometheus_client

[options.extras_require]
Testing =
    pytest
    pytest-cpp
    pytest-timeout
    packaging
    future
    pytest-server-fixtures
    mock
    boto3
    moto
    flask  # Used by moto
    flask-cors
    hypothesis <6.73
    pymongo
